@@ -18,6 +18,9 @@ ChangeLog for PyLint
     * Make dot output for import graph predictable and not depend
       on ordering of strings in hashes. (patch by Torsten Marek)
 
+    * Add hooks for import path setup and move pylint's sys.path
+      modifications into them. (patch by Torsten Marek)
+
 2012-10-05  --  0.26.0
     * #106534: add --ignore-imports option to code similarity checking
       and 'symilar' command line tool (patch by Ry4an Brase)
